proj5_multi/ingress-multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fabflix-ingress-multi
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "stickounet"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: fabflix-login-service
                port:
                  number: 8080
          - path: /login.*
            pathType: ImplementationSpecific   # Implementation-specific path matching for regex
            backend:
              service:
                name: fabflix-login-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fabflix-movies-service
                port:
                  number: 8080
